Some more information

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>PassGen</h1>
+    <h1>PassGen <small>A tiny password manager</small></h1>
 
     <div class="form-group">
         <label for="masterPass">Master Password</label>
@@ -35,6 +35,17 @@
             <input type="password" class="form-control" id="output" readonly>
         </div>
     </div>
+
+    <h2>About</h2>
+
+    <p>PassGen is a very very small password manager. All you have to do is enter your master password in the top field, and a site name in the bottom.
+    PassGen will automatically create a password for that site. Check the checkbox to show the password. The password will always contain uppercase, lowercase, digit and special characters, and will always be exactly 57 characters long, ending in "==".
+    PassGen is deterministic, which means you can input your master password and the site name on any computer, anywhere (even offline), and the password will be the same.</p>
+
+    <p>Nothing you enter here is ever sent to a server, which means you can download this page onto a USB stick and use it offline, if you want to. You can also check the source code
+    on <a href="http://github.com/Voltasalt/PassGen">GitHub</a> if you don't believe me.</p>
 </div>
+
+<a href="https://github.com/Voltasalt/PassGen"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
 </body>
 </html>
